[package]
name = "hello_rust"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand = "^0.8.5"
plotly = { version = "^0.8.4", features = ["kaleido"] }

[dev-dependencies]
criterion = { version = "^0.5", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false