[package]
name = "hello_rust"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand = "^0.8.5"
plotly = { version = "^0.8.4", features = ["kaleido"] }
serde = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"

[dev-dependencies]
criterion = { version = "^0.5", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false