[package]
name = "ising_toy"
version = "0.2.0"
edition = "2021"
description = "A generalizable Ising model in Rust. Will also do Conway's game of life right out of the box."
license = "GPL-2.0-or-later"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand = "^0.8.5"
plotly = { version = "^0.8.4", features = ["kaleido"] }
serde = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"

[dev-dependencies]
criterion = { version = "^0.5", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false